57: Fix issue on image alignment

--- a/themes/profumo-labo/_dev/css/theme/components/home/_blockreassurance.scss
+++ b/themes/profumo-labo/_dev/css/theme/components/home/_blockreassurance.scss
@@ -48,6 +48,11 @@
 
     .block-icon {
         margin-bottom: 28px;
+
+        img{
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 
     .block-title,
